2003-07-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	PR other/11123
	* toplev.c: Don't cut off option names.

2003-07-13  Andreas Jaeger  <aj@suse.de>

	* c-decl.c (link_hash_hash): Avoid warning about casting pointer
	to integer of different size.

2003-07-13  Kazu Hirata  <kazu@cs.umass.edu>

	* combine.c (simplify_comparison): Convert (ne (and (not X) 1) 0)
	to (eq (and X 1) 0).

2003-07-13  Andreas Jaeger  <aj@suse.de>

	* config.gcc: Add pmmintrin.h for x86_64-*-*.

2003-07-13  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.in (LIBCPP_DEPS): Remove coretypes.h and $(TM_H).
	(hashtable.o, line-map.o, mkdeps.o): Likewise, from dependency
	list.  Move these all together down by cpplib.

	* cpplib.h: Don't refer to MAX_WCHAR_TYPE_SIZE when determining
	definition of CPPCHAR_SIGNED_T.

	* cppcharset.c, cpperror.c, cppexp.c, cppfiles.c, cpphash.c, cppinit.c
	* cpplex.c, cpplib.c, cppmacro.c, cpppch.c, cpptrad.c, hashtable.c
	* line-map.c, mkdeps.c: Don't include coretypes.h or tm.h.

	* cpphash.c (_cpp_init_hashtable): Don't use gcc_obstack_init.
	* cppinit.c (cpp_create_reader): Likewise.

	* cpphash.h (scan_out_logical_line): Rename _cpp_scan_out_logical_line.
	* cpptrad.c: Likewise.  All callers changed.
	* cpplib.c: All callers changed.
	* c-ppoutput.c: Replace 'uchar' with 'unsigned char' throughout.
	* hashtable.h: Define GTY(x) to nothing here too.

2003-07-13  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* stor-layout.c (compute_record_mode): Remove very obsolete test
	that forces BLKmode for records with fields crossing word boundary.

2003-07-13  Zack Weinberg  <zack@codesourcery.com>

	* Makefile.in: Remove orphan reference to acconfig.h.

2003-07-13  Andreas Jaeger  <aj@suse.de>

	* cgraphunit.c: Convert prototypes to ISO C90.

2003-07-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	* fixinc/inclhack.def (avoid_wchar_t_type): Use __cplusplus bypass
	(for OpenBSD).
	* fixinc/fixincl.x: Rebuild.

2003-07-12  Zack Weinberg  <zack@codesourcery.com>
